# deslop

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
deslop/: __init__.py  cli.py  patterns.py  scorer.py
tests/: test_patterns.py  test_scorer.py
